# LLM-e-commerce

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_schema.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  run_migrations.sh
alembic/: env.py
alembic/versions/: 20260522_0939_initial_schema.py  20260522_1818_llm_db_schema.py  20260610_2302_llm_db_schema.py  20260623_1824_add_oauth_support.py
app/: config.py  main.py
app/infrastructure/cache/: redis.py
app/infrastructure/database/: base.py  models.py  session.py
app/infrastructure/llm/: client.py  embedder.py
app/modules/admin/: models.py  repository.py  router.py  schemas.py  services.py
app/modules/ai/: models.py
app/modules/auth/: jwt.py  models.py  oauth.py  repository.py  router.py  schemas.py  service.py
app/modules/orders/: models.py
app/modules/products/: models.py
