[project]
name = "llm-ecommerce-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # ─── Web framework ───────────────────────────────────────────
    "fastapi[standard]>=0.115",       # framework principal + uvicorn incluido
    "python-multipart>=0.0.12",       # para form data / file uploads

    # ─── Base de datos ───────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0",       # ORM async
    "asyncpg>=0.30",                  # driver PostgreSQL async (el más rápido)
    "alembic>=1.14",                  # migrations (equivalente a prisma migrate)
    "pgvector>=0.3",                  # extensión vector search en PostgreSQL

    # ─── Configuración / Entorno ─────────────────────────────────
    "pydantic-settings>=2.0",         # manejo de .env con tipado (reemplaza dotenv)
    "pydantic[email]>=2.0",           # validación de emails en schemas

    # ─── Auth (JWT propio) ───────────────────────────────────────
    "python-jose[cryptography]>=3.3", # encode/decode JWT
    "passlib[bcrypt]>=1.7",           # hash de passwords

    # ─── Cache / Sesiones ────────────────────────────────────────
    "redis>=5.0",            # carrito, sesiones, rate limiting

    # ─── AI - LLM (Google Gemini, gratis) ────────────────────────
    "google-generativeai>=0.8",       # Gemini API (Google AI Studio, free tier)

    # ─── AI - Embeddings (Cohere, gratis) ────────────────────────
    "cohere>=5.0",                    # embeddings + reranking gratis

    # ─── AI - RAG / Orchestration ────────────────────────────────
    "langchain>=0.3",                 # orquestación RAG
    "langchain-google-genai>=2.0",    # integración LangChain + Gemini
    "langchain-cohere>=0.3",          # integración LangChain + Cohere embeddings
    "langchain-postgres>=0.0.12",     # pgvector como vectorstore en LangChain

    # ─── Storage (Cloudflare R2, compatible con S3) ───────────────
    "boto3>=1.35",                    # cliente S3-compatible para R2

    # ─── HTTP client ─────────────────────────────────────────────
    "httpx>=0.27",                    # requests async (para llamadas externas)
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",           # tests async
    "pytest-cov>=5.0",                # coverage
    "httpx>=0.27",                    # test client de FastAPI
    "faker>=28.0",                    # generar datos de prueba
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]